--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="lead-content">
             <h1>Fatimaezzahra HAMOUSSA</h1>
             <h2>Data scientist Junior</h2>
-            <a href="/Users/fatimaezzahrahamoussa/Desktop/cv/devportfolio/Entry_Level_Resume_Template__LaTeX_.pdf" class="btn-rounded-white">Télécharger mon CV</a>
+            <a href="cv" class="btn-rounded-white">Télécharger mon CV</a>
         </div>
         <!-- End #lead-content -->
 
