--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <!-- End #lead -->
 
-    <div id="about">
+    <div id="A propos de moi">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -87,7 +87,7 @@
     <div id="contact">
         <h2>Contactez-moi</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/hamoussafatimaezzahra679@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Votre email" required>
                 <textarea name="message" placeholder="Votre  message" required></textarea>
