--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">A propos de moi</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>Actuellement en stage de fin d'études après une dernière année de M2 en intelligence artificielle et robotique, je recherche d'un CDI a l'issue de mon stage .</p>
-                    <p>Je souhaiterais mettre en pratique les enseignements dispensés durant mon parcours académique ainsi que mes expériences acquises durant mon stage .</p>
-                    <p>Je suis particulièrement intéressée par un poste orienté innovation et développement, dans les domaines de  la Data science , du Machine Learning , et  des statisques.</p>
+                    <p>Actuellement en stage de fin d'études après une dernière année de M2 en intelligence artificielle et robotique, je recherche un CDI a l'issue de mon stage .</p>
+                    <p>Je souhaiterais mettre en pratique les enseignements dispensés durant mon parcours académique ainsi que mes expériences acquises durant mes stages .</p>
+                    <p>Je suis particulièrement intéressée par un poste orienté innovation et développement, dans les domaines de  la Data science , du Machine Learning ,du Deep Learning, et  des statisques.</p>
                     <p>Vous trouvez mon cv ci-dessous . Je reste disponible par mail .</p>
                     <p>  En vous remercions
                     </p>
