--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div id="contact">
         <h2>Contactez-moi</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/hamoussafatimaezzahra679@gmail.com">
+            <form method="POST" action="https://formspree.io/f/myylnnlz">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Votre email" required>
                 <textarea name="message" placeholder="Votre  message" required></textarea>
