--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                     <h2 class="heading">A propos de moi</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>Actuellement en stage de fin d'études après une dernière année de M2 en intelligence artificielle et robotique, je suis à la  recherche une nouvelle aventure(CDI) qui pourrait commencer en  mi-Octobre .</p>
-                    <p>Je souhaiterais mettre en pratique les enseignements dispensés durant mon parcours académique ainsi que mes expériences acquises durant mes stages .</p>
-                    <p>Je suis particulièrement intéressée par un poste orienté innovation et développement, dans les domaines de  la Data science , du Machine Learning ,du Deep Learning, et des statisques.</p>
-                    <p>Vous trouvez mon cv ci-dessus .N’hésitez pas a me contacter via le formulaire ci-dessus  .</p>
-                    <p> Je vous remercie  par avance pour l'intérêt accordé a mon profil .
+                    <p>Je suis actuellement en stage de fin d'études en Intelligence Artificielle et Robotique. Je suis à la recherche d'une nouvelle aventure (CDI) à la issue de mon stage qui pourrait commencer dès la mi-Octobre.</p>
+                    <p> Je souhaite mettre en pratique ce que j'ai appris durant mon parcours académique et mes expériences acquises lors de mes stages.</p>
+                    <p> Je suis particulièrement intéressé par un poste orienté innovation et développement, dans les domaines de la Data science, du Machine Learning ,du Deep Learning, et des statistiques.</p>
+                    <p> Vous pouvez trouver mon cv ci-joint, n'hésitez pas à me contacter via le formulaire ci-dessus.</p>
+                    <p>  Je vous remercie d'avance pour l'intérêt porté à mon profil.
                     </p>
                 </div>
             </div>
