--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="lead-content">
             <h1>Fatimaezzahra HAMOUSSA</h1>
             <h2>Data scientist Junior</h2>
-            <a href="resumee.pdf" class="btn-rounded-white">Télécharger mon CV</a>
+            <a href="Cv Hamoussa.pdf" class="btn-rounded-white">Télécharger mon CV</a>
         </div>
         <!-- End #lead-content -->
 
@@ -62,8 +62,8 @@
                 <div class="col-md-8">
                     <p>Je suis actuellement en stage de fin d'études en Intelligence Artificielle et Robotique. Je suis à la recherche d'une nouvelle aventure (CDI) à la issue de mon stage qui pourrait commencer dès  mi-Octobre.</p>
                     <p> Je souhaite mettre en pratique ce que j'ai appris durant mon parcours académique et mes expériences acquises lors de mes stages.</p>
-                    <p> Je suis particulièrement intéressé par un poste orienté innovation et développement, dans les domaines de la Data science, du Machine Learning ,du Deep Learning, et des statistiques.</p>
-                    <p> Vous pouvez trouver mon cv ci-joint, n'hésitez pas à me contacter via le formulaire ci-dessous.</p>
+                    <p> Je suis particulièrement intéressée par un poste orienté innovation et développement, dans les domaines de la Data science, de la Data engineering , du Machine Learning ,du Deep Learning, et des statistiques.</p>
+                    <p> Vous trouvez mon cv ci-joint, n'hésitez pas à me contacter via le formulaire ci-dessous.</p>
                     <p>  Je vous remercie d'avance pour l'intérêt porté à mon profil.
                     </p>
                 </div>
