--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h2 class="heading">A propos de moi</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>Je suis actuellement en stage de fin d'études en Intelligence Artificielle et Robotique. Je suis à la recherche d'une nouvelle aventure (CDI) à la issue de mon stage qui pourrait commencer dès  mi-Octobre.</p>
+                    <p>Actuellement en stage de fin d'études en Data science. Je suis à la recherche d'une nouvelle aventure (CDI) à la issue de mon stage qui pourrait commencer dès  mi-Octobre.</p>
                     <p> Je souhaite mettre en pratique ce que j'ai appris durant mon parcours académique et mes expériences acquises lors de mes stages.</p>
                     <p> Je suis particulièrement intéressée par un poste orienté innovation et développement, dans les domaines de la Data science, de la Data engineering , du Machine Learning ,du Deep Learning, et des statistiques.</p>
                     <p> Vous trouvez mon cv ci-joint, n'hésitez pas à me contacter via le formulaire ci-dessous.</p>
