--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Fatimaezzahra HAMOUSSA</h1>
-            <h2>Data scientist Junior</h2>
-            <a href="cvfzhamoussa (1).pdf" class="btn-rounded-white">Télécharger mon CV</a>
+            <h2>Data scientist/Engineer</h2>
+            <a href="cvhamoussa.pdf" class="btn-rounded-white">Télécharger mon CV</a>
         </div>
         <!-- End #lead-content -->
 
